# OxidERP

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: main.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/modules/accounting/: Cargo.toml
crates/modules/accounting/src/: lib.rs
crates/modules/crm/: Cargo.toml
crates/modules/crm/src/: lib.rs
crates/modules/inventory/: Cargo.toml
crates/modules/inventory/src/: lib.rs
crates/modules/sales/: Cargo.toml
crates/modules/sales/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
deploy/: install-nginx.sh  install-systemd.sh  nginx.conf  oxiderp.env.example  oxiderp.service
docs/: architecture.md  deployment.md  rust-frontend-plan.md
frontend/: index.html  rust-index.html  style.css
