[package]
name = "oxiderp-frontend"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oxiderp-sdk = { path = "../sdk" }
leptos = { version = "0.6", features = ["csr"] }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "Storage",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
